samples/_failures_safe/1761356905_cace3e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb880a5d.c: In function ‘main’:
./samples/SAFE/__tmp_cb880a5d.c:151:28: error: missing terminating " character
  151 |                     printf("Error: Incompatible dimensions for multiplication.\
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_cb880a5d.c:151:21: error: expected expression at end of input
  151 |                     printf("Error: Incompatible dimensions for multiplication.\
      |                     ^~~~~~
./samples/SAFE/__tmp_cb880a5d.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cb880a5d.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cb880a5d.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cb880a5d.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cb880a5d.c:151:21: error: expected declaration or statement at end of input
